# MobiSim-Bench

./: README.md  pyproject.toml  template_config.yml
baselines/: Dailly_Extra.py  Daily_Brain.py  Daily_Glue.py  Hurricane_Brain.py  Hurricane_Extra.py  Hurricane_Glue.py
mobisim-data/datasets/DailyMobility/: MISSING_FILES.md
mobisim-data/datasets/DailyMobility/groundtruth/: daily_intentions.json  daily_intentions_2d.csv  daily_intentions_2d.npy  daily_location_numbers.csv  daily_location_numbers.npy  gyration_radius.csv  gyration_radius.npy  intention_proportions.json  intention_proportions_2d.csv  intention_proportions_2d.npy
mobisim-data/datasets/HurricaneMobility/: MISSING_FILES.md  profiles.json
mobisim-data/datasets/HurricaneMobility/groundtruth/: README.md  groundtruth.7z.004  hurricane_groundtruth.json  hurricane_mobility_stats.json  process.py
mobisimbench/: __init__.py  runner.py
mobisimbench/benchmarks/: __init__.py
mobisimbench/benchmarks/DailyMobility/: __init__.py  evaluation.py  prepare_config.py
mobisimbench/benchmarks/HurricaneMobility/: __init__.py  evaluation.py  prepare_config.py
mobisimbench/cli/: __init__.py  config.py  main.py
mobisimbench/cli/commands/: clone.py  evaluate.py  run.py
