[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobisimbench"
version = "0.1.0"
description = "The Mobility Simulation Benchmark"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.11"
dependencies = [
    "agentsociety>=1.5.0rc3",
    "click>=8.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "pathlib2>=2.3.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.20.0",
    "tqdm>=4.64.0",
    "scipy>=1.16.2",
]

[project.scripts]
mbbench = "mobisimbench.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["mobisimbench"]
